@@ -7,6 +7,7 @@ requires "Dist::Zilla::Plugin::Author::KENTNL::TravisCI" => "0.001002";
 requires "Dist::Zilla::Plugin::Authority" => "1.006";
 requires "Dist::Zilla::Plugin::AutoPrereqs" => "0";
 requires "Dist::Zilla::Plugin::BumpVersionAfterRelease" => "0";
+requires "Dist::Zilla::Plugin::CPANFile" => "0";
 requires "Dist::Zilla::Plugin::ConfirmRelease" => "0";
 requires "Dist::Zilla::Plugin::CopyFilesFromBuild" => "0";
 requires "Dist::Zilla::Plugin::Git::Check" => "0";
