@@ -297,7 +297,21 @@ has srcreadme => (
   default => sub { return 'mkdn'; },
 );
 
+=attr C<carton_mode>
+
+  carton_mode = 1 ; # Add glue layers necessary for working under carton
+
+=cut
+
+has 'carton_mode' => (
+  is      => ro  =>,
+  isa     => 'Bool',
+  lazy    => 1,
+  default => sub { return },
+);
+
 __PACKAGE__->meta->make_immutable;
+
 no Moose;
 no Moose::Util::TypeConstraints;
 
@@ -406,8 +420,15 @@ sub _configure_basic_files {
   my ($self)         = @_;
   my (@ignore_files) = qw( README README.mkdn README.pod CONTRIBUTING.pod );
   my (@copyfiles)    = ();
+  my (@ignore_match) = ();
+
   if ( _none_match 'none', @{ $self->copyfiles } ) {
     push @copyfiles, @{ $self->copyfiles };
+  }
+  if ( $self->carton_mode ) {
+    push @copyfiles,    'cpanfile';
+    push @ignore_match, '^vendor/';
+    push @ignore_match, '^local/';
   }
   push @ignore_files, @copyfiles;
 
@@ -415,13 +436,15 @@ sub _configure_basic_files {
     'Git::GatherDir' => {
       include_dotfiles => 1,
       exclude_filename => [@ignore_files],
+      @ignore_match ? ( exclude_match => [@ignore_match] ) : ()
     },
   );
   $self->add_plugin( 'License' => {} );
 
-  $self->add_plugin( 'MetaJSON'                 => {} );
-  $self->add_plugin( 'MetaYAML::Minimal'        => {} );
-  $self->add_plugin( 'Manifest'                 => {} );
+  $self->add_plugin( 'MetaJSON'          => {} );
+  $self->add_plugin( 'MetaYAML::Minimal' => {} );
+  $self->carton_mode and $self->add_plugin( 'CPANFile' => {} );
+  $self->add_plugin( 'Manifest' => {} );
   $self->add_plugin( 'Author::KENTNL::TravisCI' => { ':version' => '0.001002' } );
   $self->add_plugin(
     'Author::KENTNL::CONTRIBUTING' => {
