@@ -4,6 +4,10 @@
  [Dependencies::Stats]
  - Dependencies changed since 2.025010, see misc/*.deps* for details
  - develop: +1
+ - runtime: +1
+
+ [Features]
+ - add a `carton_mode` parameter that presently just sets up cpanfile and local/etc rules.
 
 2.025010 2015-11-15T02:28:17Z f61f784
  - Provision more files during minting instead of relying on generation on the first invocation of `dzil build`
